Adiciona visualização gráfica e gráficos comparativos ao GUI
- Implementa GraphPanel para visualização de grafos (até 1.000 vértices)
- Adiciona ComparisonChartPanel com gráficos de barras comparativos
- Gráficos de tempos de execução (Dijkstra, Kruskal, Prim)
- Gráficos de tamanhos (Vértices vs Arcos)
- Interface com abas para alternar entre visualizações
- Colorização de vértices por alcance (origem, alcançável, isolado)
- Layout automático circular para grafos pequenos e grade para grandes
- Atualização automática dos gráficos ao processar arquivos
- Arquivo de teste pequeno (test-small.gr) para demonstração
- Correções de warnings: campos final, Locale.of() atualizado
- Atualiza README com documentação das novas funcionalidades